# EM-Fault-It-Yourself

./: README.md  setup.cfg  setup.py
emfi_station/: __init__.py  __main__.py  attack.py  attack_importer.py  attack_logger.py  attack_worker.py  config.py  emfi_station.py  joystick.py  marlin.py  marlin_serial.py  microscope.py  thermal_camera.py  utils.py  web_server.py  websocket_helper.py  websocket_server.py  websocket_state.py
emfi_station/web/: __init__.py  app.js  index.css  index.html
hardware/: README.md
hardware/adapter_plates/: adapter_chipshouter.ipt  adapter_chipshouter.stl  adapter_chipshouter.stp  adapter_stage.ipt  adapter_stage.stl  adapter_stage.stp
hardware/atx_mount/: atx_mount.ipt  atx_mount.stl  atx_mount.stp
hardware/chipshouter_mount/: chipshouter_mount.stl  chipshouter_mount.stp  chipshouter_mount_assembly.iam  chipshouter_mount_bottom.ipt  chipshouter_mount_bottom.stl  chipshouter_mount_bottom.stp  chipshouter_mount_bracket.ipt  microscope_mount.ipt
hardware/ir_camera_mount/: ir_camera_mount.ipt  ir_camera_mount.stl  ir_camera_mount.stp
hardware/skr_pro_case/: skr_case.ipt  skr_case.stl  skr_case.stp  skr_case_top.ipt  skr_case_top.stl  skr_case_top.stp
marlin/: Configuration.h  Configuration_adv.h  README.md
