[metadata]
name = emfi-station
version = 0.1
author = Niclas Kühnapfel
author_email = niclas.k@posteo.de
url = https://github.com/fgsect/EM-Fault-It-Yourself
description = EMFI Station orchestrates a XYZ stage, several cameras and sensors to carry out electromagnetic fault
              injection attacks.
classifiers = Development Status :: 4 - Beta
              Intended Audience :: Science/Research
              Topic :: Security
              License :: OSI Approved :: GNU General Public License v3 (GPLv3)
              Programming Language :: Python :: 3.9

[options]
packages = emfi_station
python_requires = >=3.9
install_requires = cmapy
                   evdev
                   numpy
                   opencv-python
                   pyserial
                   pyudev
                   websockets
                   setuptools_scm
                   adafruit-circuitpython-mlx90640

[options.entry_points]
console_scripts = emfi-station = emfi_station.__main__:main